smudge brush added
svn://old.homeip.net/code/mypaint@245

--- a/README
+++ b/README
@@ -15,3 +15,6 @@ Debian users: apt-get install python-gtk2-dev
 http://people.ee.ethz.ch/~mrenold/mypaint/
 http://old.homeip.net/martin/painting/
 
+Brush contributors:
+Artis Rozentals
+
