adding copyright/GPL statements everywhere
svn://old.homeip.net/code/mypaint@492

--- a/README
+++ b/README
@@ -15,3 +15,4 @@ Project homepage:
 http://people.ee.ethz.ch/~mrenold/mypaint/
 http://old.homeip.net/martin/painting/
 
+The license for this program is in the file COPYING.
