use psyco when available
svn://svn.gna.org/svn/mypaint/trunk@265

--- a/README
+++ b/README
@@ -16,6 +16,7 @@ Building on Linux:
 
     Required: pygtk, python, swig, gtk, numpy
     Debian and derivatives need: python-gtk2-dev python-numpy swig scons
+    Slow PCs will get a small speedup by installing psyco.
 
     Recommended: a pressure sensitive input device (graphic tablet)
 
