--- a/README
+++ b/README
@@ -14,7 +14,7 @@ Building on Linux:
     Install:
     scons prefix=/usr/local install
 
-    Required: pygtk, python, swig, gtk, numpy
+    Required: pygtk, python, swig, gtk, numpy, pycairo(>=1.4)
     Debian and derivatives need: python-gtk2-dev python-numpy swig scons
     Slow PCs will get a small speedup by installing psyco.
 
