updated dependencies on debian
svn://svn.gna.org/svn/mypaint/trunk@294

--- a/README
+++ b/README
@@ -15,7 +15,7 @@ Building on Linux:
     scons prefix=/usr/local install
 
     Required: pygtk, python, swig, gtk, numpy, pycairo(>=1.4)
-    Debian and derivatives need: python-gtk2-dev python-numpy swig scons
+    Debian and derivatives need: python2.6-dev libglib2.0-dev python-numpy swig scons
     Slow PCs will get a small speedup by installing psyco.
 
     Recommended: a pressure sensitive input device (graphic tablet)
