home key now toggles layer solo mode (you can still hold it to peek into solo view)
svn://svn.gna.org/svn/mypaint/trunk@333

--- a/changelog
+++ b/changelog
@@ -1,5 +1,6 @@
 SVN:
-- Ghost lines between strokes (on touchpads) fixed
+- color history popup
+- <strike>Ghost lines between strokes (on touchpads) fixed</strike> fix reverted
 - Elliptical dabs
 
 Version 0.6.0:
