--- a/README
+++ b/README
@@ -15,7 +15,7 @@ Building on Linux:
     scons prefix=/usr/local install
 
     Required: pygtk, python, swig, gtk, numpy, pycairo(>=1.4)
-    Debian and derivatives need: python2.6-dev libglib2.0-dev python-numpy swig scons
+    Debian users: apt-get install python-dev libglib2.0-dev python-numpy swig scons
 
     Recommended: a pressure sensitive input device (graphic tablet)
 
