fix building of translations
Updating translations now requires an explicit scons parameter.
(losely based on a patch by waynew)
Also fix creation of missing directories.

--- a/README
+++ b/README
@@ -15,7 +15,7 @@ Building on Linux:
     scons prefix=/usr/local install
 
     Required: pygtk, python, swig, gtk, numpy, pycairo(>=1.4)
-    Debian users: apt-get install g++ python-dev libglib2.0-dev python-numpy swig scons
+    Debian users: apt-get install g++ python-dev libglib2.0-dev python-numpy swig scons gettext
 
     Recommended: a pressure sensitive input device (graphic tablet)
 
