--- a/po/hu.po
+++ b/po/hu.po
@@ -1,14 +1,14 @@
 # Hungarian translation of MyPaint.
 # Copyright (C) 2009 Martin Renold, Ilya Portnov
 # This file is distributed under the same license as the MyPaint package.
-# Martin Renold <martinxyz@gmx.ch> 2009
-#
+# Martin Renold <martinxyz@gmx.ch> 2009 
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: MyPaint 0.7.1+git\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-11-14 16:13+0100\n"
-"PO-Revision-Date: 2009-11-15 13:46+0100\n"
+"PO-Revision-Date: 2009-11-23 19:18+0100\n"
 "Last-Translator: Gergely Aradszki <garpeer@cube-x.hu>\n"
 "Language-Team: Hungarian <hu@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -20,15 +20,15 @@ msgstr ""
 msgid ""
 "The pressure reported by the tablet, between 0.0 and 1.0. If you use the "
 "mouse, it will be 0.5 when a button is pressed and 0.0 otherwise."
-msgstr "A tábla által közöl nyomásérték, 0.0 és 1.0 között. Ha egeret használsz, az egérgomb lenyomásakor ez 0.5 lesz, egyébként 0.0."
+msgstr "A tábla által közölt nyomásérték, 0.0 és 1.0 között. Ha egeret használ, az egérgomb lenyomásakor ez 0.5 lesz, egyébként 0.0."
 
 #: ../brushlib/brushsettings.py:23
 msgid ""
 "How fast you currently move. This can change very quickly. Try 'print input "
 "values' from the 'help' menu to get a feeling for the range; negative values "
 "are rare but possible for very low speed."
-msgstr "A pillanatnyi sebesség, ami nagyon gyorsan tud változni. Próbáld ki az "
-"'Ecset bemeneti értékeinek kiírását' a 'Súgó' menüben, és láthatod az "
+msgstr "A pillanatnyi sebesség, ami nagyon gyorsan tud változni. Próbálja ki az "
+"'Ecset bemeneti értékeinek kiírását' a 'Súgó' menüben, és láthatjad az "
 "érték tartományt. Negatív értékek ritkán, de előfordulhatnak, ha nagyon"
 "lassú a mozgás."
 
@@ -51,7 +51,7 @@ msgid ""
 "be configured to jump back to zero periodically while you move. Look at the "
 "'stroke duration' and 'stroke hold time' settings."
 msgstr "Ez az érték az ecsetvonás közben lassan 0-tól lassan 1-ig nő. Be lehet állítani "
-"úgy is, hogy periodikusan visszaugorjon 0-ra. Nézd meg az 'ecsetvonás "
+"úgy is, hogy periodikusan visszaugorjon 0-ra. Nézze meg az 'ecsetvonás "
 "hossza' és az 'ecsetvonás tartási ideje' beállításokat."
 
 #: ../brushlib/brushsettings.py:27
@@ -65,7 +65,7 @@ msgstr "Az ecset szöge, fokban. Az érték 0.0 és 180.0 között mozoghat, teh
 #: ../brushlib/brushsettings.py:29
 msgid ""
 "This is a user defined input. Look at the 'custom input' setting for details."
-msgstr "Ez egy felhasználó által meghatározott bemenet. Nézd meg a 'saját bemenet' "
+msgstr "Ez egy felhasználó által meghatározott bemenet. Nézze meg a 'saját bemenet' "
 "beállításait a részletekért."
 
 #. internal name, displayed name, constant, minimum, default, maximum, tooltip
@@ -108,7 +108,7 @@ msgid ""
 msgstr "Az egymásra rajzolt foltok összemosásakor keletkező egyenetlenséget korrigálja."
 "Ennek eredményeként lineáris, természetes nyomást kapsz, ha a nyomás "
 "az 'Átlátszatlanság szorzás'-ra van állítva, ahogy általában lenni szokott. "
-"a 0.9 általános beállításként elfogadható, de állítsad alacsonyabbra, ha azecsetednek nagy a szórása, vagy magasabbra, ha a 'Foltok száma másodpercenként' magas.\n"
+"a 0.9 általános beállításként elfogadható, de állítsa alacsonyabbra, ha az ecsetnek nagy a szórása, vagy magasabbra, ha a 'Foltok száma másodpercenként' magas.\n"
 "0.0: a fenti átlátszatlanság érték az egyes foltokra vonatkozik\n"
 "1.0 a fenti átlátszatlanság érték a végső ecsetvonásra vonatkozik, felételezve, hogy minden pixel 'Foltok száma sugaranként'*2 foltot kap átlagosan"
 ""
@@ -132,7 +132,7 @@ msgstr "Keménység"
 
 #: ../brushlib/brushsettings.py:42
 msgid "hard brush-circle borders (setting to zero will draw nothing)"
-msgstr "Kemény ecset-körvonal (ha 0-ra állítod, az ecset nem fog festeni)"
+msgstr "Kemény ecset-körvonal (0-ra állítva az ecset nem fog festeni)"
 
 #: ../brushlib/brushsettings.py:43
 msgid "dabs per basic radius"
@@ -175,7 +175,11 @@ msgid ""
 "1) the opaque value will be corrected such that a big-radius dabs is more "
 "transparent\n"
 "2) it will not change the actual radius seen by dabs_per_actual_radius"
-msgstr "A sugár foltonként véletlenszerűen változik. A 'Véletlenszerű bemenet szerint'"
+msgstr "A sugár foltonként véletlenszerűen változik, hasonlóan ahhoz, mintha a "
+" 'Véletlenszerű bemenet szerint' bemenetet használná a sugár beállításánál."
+"Az itteni beállítás két dologban tér el ettől:\n"
+"1. Az átlátszatlanság érték úgy módosul, hogy a nagyobb foltok átlátszóbbak lesznek\n"
+"2. Nem hat a 'valós sugár' bemenet által látott értékre"
 
 #: ../brushlib/brushsettings.py:47
 msgid "speed1 filter"
@@ -269,7 +273,7 @@ msgid ""
 "Slowdown pointer tracking speed. 0 disables it, higher values remove more "
 "jitter in cursor movements. Useful for drawing smooth, comic-like outlines."
 msgstr "Csökkenti a kurzor követésének sebességét. A 0 kikapcsolja, a nagyobb értékek "
-"csökkentik a kurzor remegését. Hasznos lehet sima, képregény-szerű vonalak "
+"csökkentik a kurzor remegését. Hasznos lehet sima, képregényszerű vonalak "
 "rajzolásához."
 
 #: ../brushlib/brushsettings.py:55
@@ -280,7 +284,7 @@ msgstr "Lassú pozíció-követés foltonként"
 msgid ""
 "Similar as above but at brushdab level (ignoring how much time has past, if "
 "brushdabs do not depend on time)"
-msgstr "Hasonló a felette lévőhöz, de folt-szinten. (Nem veszi figyelembe az eltelt idő, ha a foltok száma nem függ az időtől.)"
+msgstr "Hasonló a felette lévőhöz, de folt-szinten. (Nem veszi figyelembe az eltelt időt, ha a foltok száma nem függ az időtől.)"
 
 #: ../brushlib/brushsettings.py:56
 msgid "tracking noise"
@@ -365,7 +369,7 @@ msgid ""
 " 0.0 disable\n"
 " 1.0 brigher"
 msgstr "A szín értékének változtatása (világosság, intenzitás) a HSV színmodell szerint."
-"A HSV változtatásokat a HSL előtt alkalmazzuk.\n"
+"A HSV változtatásokat a HSL előtt kerül alkalmazásra.\n"
 "-1.0: sötétebb\n"
 "0.0: nincs változtatás\n"
 "1.0: világosabb"
@@ -382,7 +386,7 @@ msgid ""
 " 0.0 disable\n"
 " 1.0 more saturated"
 msgstr "A szín telítettségének változtatása a HSV színmodell szerint."
-"A HSV változtatásokat a HSL előtt alkalmazzuk.\n"
+"A HSV változtatásokat a HSL előtt kerül alkalmazásra.\n"
 "-1.0: szürkébb\n"
 "0.0: nincs változtatás\n"
 "1.0: telítettebb"
@@ -399,7 +403,7 @@ msgid ""
 " 0.5 mix the smudge color with the brush color\n"
 " 1.0 use only the smudge color"
 msgstr "Az elkenési színnel fest az ecset színe helyett. Az elkenési szín lassan "
-"arra a színre változik, mint amire festesz.\n"
+"arra a színre változik, mint amire épppen fest.\n"
 "0.0: ne használja az elkenési színt"
 "0.5: az elkenési- és az ecset-szín keverése"
 "1.0: csak az elkenési szín használata"
@@ -414,7 +418,7 @@ msgid ""
 "on.\n"
 "0.0 immediately change the smudge color\n"
 "1.0 never change the smudge color"
-msgstr "Milyen gyorsan veszi fel az elkenés azt a színt, amire éppen festesz.\n"
+msgstr "Milyen gyorsan veszi fel az elkenés azt a színt, amire éppen fest.\n"
 "0.0: azonnal változzon"
 "1.0: soha nem változik"
 
@@ -442,7 +446,7 @@ msgid ""
 "How much pressure is needed to start a stroke. This affects the stroke input "
 "only. Mypaint does not need a minimal pressure to start drawing."
 msgstr "Mekkora nyomás szükséges a vonás elkezdéséhez. Csak az ecsetvonás bemenetre hat. "
-"A MyPaint-nek nincsen szüksége egy minimális nyomásra a rajzolás megkezdéséhez."
+"A MyPaint-nek nincsen szüksége minimális nyomásra sem a rajzolás megkezdéséhez."
 
 #: ../brushlib/brushsettings.py:71
 msgid "stroke duration"
@@ -489,8 +493,8 @@ msgstr "A 'Saját bemenetet' erre az értékre állítja. Ha lelassul, efelé az
 "(lásd lejjebb). Ez lehetővé teszi, hogy a bemenet a nyomás/sebesség/stb. keveréke "
 "legyen, majd a többi beállítást ettől függővé lehet tenni, anélkül, hogy ezt a kombinációt "
 "máshol is újra be kellene állítani.\n"
-"Ha a 'Véletlenszerű szerinti' változásra állítod, lassú (sima) véletlenszerű bemenetet "
-"tudsz létrehozni."
+"Ha a 'Véletlenszerű szerinti' változásra állítja, lassú (sima) véletlenszerű bemenetet "
+"tud létrehozni."
 
 #: ../brushlib/brushsettings.py:74
 msgid "custom input filter"
@@ -515,7 +519,7 @@ msgstr "Elliptikus folt: arány"
 msgid ""
 "aspect ratio of the dabs; must be >= 1.0, where 1.0 means a perfectly round "
 "dab. TODO: linearize? start at 0.0 maybe, or log?"
-msgstr "A foltok aránya; 1.0, vagy annál nagyobb. Az 1.0 a tökéletes kört jelenti."
+msgstr "A foltok átlóinak aránya; 1.0, vagy annál nagyobb. Az 1.0 a tökéletes kört jelenti."
 
 #: ../brushlib/brushsettings.py:77
 msgid "elliptical dab: angle"
@@ -540,7 +544,7 @@ msgstr "irány szűrő"
 msgid ""
 "a low value will make the direction input adapt more quickly, a high value "
 "will make it smoother"
-msgstr "Alacsony értékek az irány bemenet sokkal gyorsabban alkalmazkodik, magas "
+msgstr "Alacsony értékeknél az irány bemenet sokkal gyorsabban alkalmazkodik, magas "
 "értékeknél viszont finomabban teszi ezt."
 
 #. set up window
@@ -574,8 +578,8 @@ msgid ""
 "The background %s was ignored because it has an alpha channel. Please remove "
 "it."
 msgstr ""
-"A %s nevű hátteret nem töltöttem be, mert átlátszósági csatornája van."
-"Kérlek, távolítsad el, és próbáld újra."
+"A %s nevű hátter nem került betöltésre, mert átlátszósági csatornája van."
+"Kérem, távolítsa el azt, és próbálja újra."
 
 #: ../gui/backgroundwindow.py:130
 #, python-format
@@ -583,7 +587,7 @@ msgid ""
 "The background %s was ignored because it has the wrong size. Only (N*%d)x(M*%"
 "d) is supported."
 msgstr ""
-"A %s nevű hátteret nem töltöttem be, mert hibás a mérete. Csak a (N*%d)x(M*%"
+"A %s nevű hátter nem került betöltésre, mert hibás a mérete. Csak a (N*%d)x(M*%"
 "d) méret támogatott."
 
 #: ../gui/brushselectionwindow.py:26
@@ -632,7 +636,7 @@ msgstr "Ecset átnevezése"
 
 #: ../gui/brushselectionwindow.py:189
 msgid "Really delete this brush?"
-msgstr "Valóban törlöd ezt az ecsetet?"
+msgstr "Valóban törli ezt az ecsetet?"
 
 #: ../gui/brushsettingswindow.py:23
 msgid "Brush settings"
@@ -640,7 +644,7 @@ msgstr "Ecset beállításai"
 
 #: ../gui/brushsettingswindow.py:29
 msgid "live update the last canvas stroke"
-msgstr "Az utolsó ecsetvonás frissítése"
+msgstr "Az utolsó ecsetvonás 'élő' frissítése"
 
 #: ../gui/colorsamplerwindow.py:391
 msgid "R: "
@@ -931,7 +935,7 @@ msgstr "Kép tükrözése"
 
 #: ../gui/drawwindow.py:608
 msgid "Really Quit?"
-msgstr "Tényleg kilépsz?"
+msgstr "Valóban ki szeretne lépni?"
 
 #: ../gui/drawwindow.py:701
 msgid ""
@@ -987,7 +991,7 @@ msgstr "program ikonja"
 
 #: ../gui/drawwindow.py:746
 msgid "Move your mouse over a menu entry, then press the key to assign."
-msgstr "Vidd az egeret egy menüpont fölé, majd nyomd meg a "
+msgstr "Vigye az egeret egy menüpont fölé, majd nyomja meg a "
 "hozzárendelendő billentyűt."
 
 #: ../gui/drawwindow.py:748
@@ -1004,8 +1008,8 @@ msgstr ""
 "\n"
 "A korábbi verzióktól eltérően a nagyitás és a vászon mozgatása már "
 "ártalmatlan, nem fogyasztja el az összes memóriát. De ha a tejesen "
-"kicsinyített nézeten a teljes vásznon festesz, még mindig nagyon "
-"sok memóriára lesz szükséged."
+"kicsinyített nézeten a teljes vásznon fest, még mindig nagyon "
+"sok memóriára lesz szüksége."
 
 #: ../gui/drawwindow.py:755
 msgid ""
@@ -1018,14 +1022,14 @@ msgid ""
 "list. But they will stay even if you quit. They will also remember the "
 "selected color. In contrast, selecting a normal brush never changes the "
 "color. "
-msgstr "Lehetőséged van gyorsbillentyűket használva gyorsan \n"
-"menteni/betölteni ecset-beállításokat. Az egyik kezeddel rajzolva, "
+msgstr "Lehetőség van gyorsbillentyűket használva gyorsan \n"
+"menteni/betölteni ecset-beállításokat. Az egyik kezével rajzolva, "
 "a másikkal az ecseteket váltogatva, megszakítások nélkül "
-"tudsz festeni.\n"
+"tud festeni.\n"
 "\n"
-"10 hely áll rendelkezésedre, hogy elmentsd ezeket az ecseteket.\n"
+"10 hely áll rendelkezésére, hogy elmentse ezeket az ecseteket.\n"
 "Ezek anonim, név nélküli eszközök, amik nem jelennek meg az ecset-választó "
-"listában, de a beállításaikat akkor is megőrzik, ha a programból kilépsz. "
+"listában, de a beállításaikat akkor is megőrzik, ha kilép a programból. "
 "A hagyományos ecsetekkel ellentétben ezek nem csak a beállításokat, de a "
 "színeket is megőrzik."
 
@@ -1140,7 +1144,7 @@ msgstr ""
 
 #: ../gui/filehandling.py:169
 msgid "Did not save, the canvas is empty."
-msgstr "Nem mentettem semmit, a vászon üres."
+msgstr "Nem mentett semmit, mivel a vászon üres."
 
 #. name, patterns
 #: ../gui/filehandling.py:195
@@ -1171,17 +1175,17 @@ msgstr "<b>%s</b> szerint"
 
 #: ../gui/gtkexcepthook.py:111
 msgid "Bug Detected"
-msgstr "Bugot találtam"
+msgstr "A MyPaint programhibát észlelt"
 
 #: ../gui/gtkexcepthook.py:115
 msgid "<big><b>A programming error has been detected.</b></big>"
-msgstr "<big><b>Programozási hibát találtam.</b></big>"
+msgstr "<big><b>A MyPaint programhibát észlelt.</b></big>"
 
 #: ../gui/gtkexcepthook.py:116
 msgid ""
 "It probably isn't fatal, but the details should be reported to the "
 "developers nonetheless."
-msgstr "Valószínűleg nem végzetes, de a részleteket azért jelenteni kellene a fejlesztőknek."
+msgstr "Valószínűleg nem végzetes, de a részleteket jelentésével segítheti a fejlesztést."
 
 #: ../gui/gtkexcepthook.py:131
 msgid "Report..."
@@ -1235,3 +1239,4 @@ msgstr "Útvonal és fájlnév előtag a \"Mentés vázlatként\"-hoz"
 #: ../gui/settingswindow.py:100
 msgid "Revert"
 msgstr "Visszaállítás"
+
